--- a/src/lab/exp1/Objective.html
+++ b/src/lab/exp1/Objective.html
@@ -103,7 +103,7 @@
             Objective of simple harmonic oscillator experiment is to understand the concept of time period (natural frequency) in  harmonic oscillations . 
 
           </p><br><br>
-<img src="simple-pendulum.JPG"/>
+<img style="max-width: 100%; height: auto;" src="simple-pendulum.JPG"/>
 </br></br></div>						</div>
 					</div>
 			</div>
