--- a/src/lab/exp1/Manual.html
+++ b/src/lab/exp1/Manual.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -132,7 +132,7 @@
 							<p>
 								<br/>
 								<!-- <a href="shm.htm" target="_blank">Go to Manual view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
-</br></br></br></br> --><a>Manual video on Simple Harmonic Oscillator Experiment is under construction</a>
+</br></br></br></br> --><!-- <a>Manual video on Simple Harmonic Oscillator Experiment is under construction</a> -->
 								<br/>
 							</p>
 						</div>
