--- a/src/lab/exp2/Further Readings.html
+++ b/src/lab/exp2/Further Readings.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -96,7 +96,7 @@
 			<!-- container-fluid end for slider -->
 			<!-- =================================================================================================================================== -->
 			<div class="container-fluid" style="margin-left: 35px; margin-right: 35px;">
-				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../Introduction.html">Structural Dynamics Lab</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../List of experiments.html">List Of Experiments</a><br/></h2>
+				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../Introduction.html">Structural Dynamics Lab</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../List of experiments.html">Experiments</a><br/></h2>
 				<div class="row">
 					<div class="col-md-2 sidebar-col-2">
 						<a class="sidebar-a" href="Introduction.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
