--- a/src/lab/exp2/Manual.html
+++ b/src/lab/exp2/Manual.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -136,7 +136,7 @@
 							<p>
 								<br/>
 								<!-- <a href="freevib.htm" target="_blank">Go to Manual view on Free Vibration of S.D.O.F system(Click here)</a><br><br>
-</br></br></br></br> --><a>Manual view on Free Vibration of S.D.O.F system is under construction</a>
+</br></br></br></br> --><!-- <a>Manual view on Free Vibration of S.D.O.F system is under construction</a> -->
 								<br/>
 							</p>
 						</div>
