--- a/src/lab/exp3/Experiment.html
+++ b/src/lab/exp3/Experiment.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -122,9 +122,10 @@
 						<h1 class="text-h1-lightblue">Forced vibration of S.D.O.F system</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Prerequisites.html"> installed to run experiment</p><br/>
-<a href="undamped_forced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a>
-									<br/> <a href="DampedForced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a>
+								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+									<a href="undamped_forced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a>
+									<br/> 
+									<a href="DampedForced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a>
 									<br/>
 									<!-- <a href="ve_forcedvibbody.html" target="_blank">Go to Virtual lab on Forced Vibration of S.D.O.F system(Click here)</a> -->
 									<br/>
