--- a/src/lab/exp3/Manual.html
+++ b/src/lab/exp3/Manual.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -136,16 +136,12 @@
 								<br/> 8. Response value increases and reaches peak when forcing frequency is nearing natural frequency of the structure.
 								<br/> 9. Draw the plot between maximum response and frequency ratio.
 								<br/>
-								<br/>
-								<br/>
 							</p>
 							<p> <a href="3.manual.pdf" target="_blank">Read More</a> </p>
 							<p>
 								<br/>
 								<!-- <a href="forced.htm" target="_blank">Go to Manual view on Forced Vibration of S.D.O.F system(Click here)</a><br><br>
-</br></br></br></br> --><a>Manual view on Forced Vibration of S.D.O.F system is under construction</a>
-								<br/>
-								<br/>
+</br></br></br></br> --><!-- <a>Manual view on Forced Vibration of S.D.O.F system is under construction</a> -->
 								<br/>
 							</p>
 						</div>
