--- a/src/lab/exp3/Objectives.html
+++ b/src/lab/exp3/Objectives.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Forced vibration of S.D.O.F system</h1>
 						<div class="content" id="experiment-article-section-3-content">
 							<p align="justify"> To understand the behavior of the single degree of freedom system when time varying force i.e ground motion is applied.
-								<br/> <img src="3.jpg" />
+							<br/><br/> <img src="3.jpg" />
 								<br/>
 							</p>
 							<br/>
