--- a/src/lab/exp5/Procedure.html
+++ b/src/lab/exp5/Procedure.html
@@ -32,7 +32,7 @@ http://vlab.co.in/broad-area-civil-engineeringen">
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
