--- a/src/lab/exp6/Further Readings.html
+++ b/src/lab/exp6/Further Readings.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -122,11 +122,11 @@
 						<h1 class="text-h1-lightblue">Vibration of M.D.O.F system</h1>
 						<div class="content" id="experiment-article-section-8-content">
 							<ul>
-								<li> <a href="http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf">http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf</a> </li>
-								<!-- <li>
+								<!-- <li> <a href="http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf">http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf</a> </li>
+								<li>
 <a href="http://ece.olin.edu/dynamics/assign/ps5_f08.pdf">http://ece.olin.edu/dynamics/assign/ps5_f08.pdf</a>
 </li> -->
-								<li> <a href="http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf">http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf</a> </li>
+								<!--<li> <a href="http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf">http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf</a> </li> -->
 								<li> "Earthquake Resistant Design of Structures" by Pankaj Agarwal, Manish Shrikande </li>
 							</ul>
 						</div>
