--- a/src/lab/exp6/Manual.html
+++ b/src/lab/exp6/Manual.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -66,7 +66,6 @@
 						<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> <span class="icon-bar" style="background-color: #77BB41"></span> </button>
 						<a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="../images/vlabs-color-small-moe.jpg" /></a>
 					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
 						<ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
 							<li>
@@ -138,7 +137,7 @@
 							<p>
 								<br/>
 								<!-- <a href="Multidegree.htm" target="_blank">Go to Manual view on Vibration of M.D.O.F system(Click here)</a><br><br>
-</br></br></br></br> --><a>Manual view on Vibration of M.D.O.F system is under construction</a>
+</br></br></br></br> --><!-- <a>Manual view on Vibration of M.D.O.F system is under construction</a> -->
 								<br/>
 							</p>
 						</div>
