--- a/src/lab/exp8/Further Readings.html
+++ b/src/lab/exp8/Further Readings.html
@@ -33,7 +33,7 @@
 	<link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	<!-- Custom CSS -->
 	<link href="../css/style.css" rel="stylesheet" />
-	<script src="tabs.js" type="text/javascript"></script>
+	<!-- <script src="tabs.js" type="text/javascript"></script> -->
 	<script>
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -123,7 +123,7 @@
 						<div class="content" id="experiment-article-section-8-content">
 							<ul>
 								<li> <a href="http://en.wikipedia.org/wiki/Torsion_%28mechanics%29">http://en.wikipedia.org/wiki/Torsion_%28mechanics%29</a> </li>
-								<li> <a href="http://www.mssu.edu/seg-vm/pict0349.html">http://www.mssu.edu/seg-vm/pict0349.html</a> </li>
+								<!-- <li> <a href="http://www.mssu.edu/seg-vm/pict0349.html">http://www.mssu.edu/seg-vm/pict0349.html</a> </li> -->
 								<li> <a href="http://en.wikipedia.org/wiki/Torsional_vibration">http://en.wikipedia.org/wiki/Torsional_vibration</a> </li>
 							</ul>
 						</div>
