--- a/src/lab/exp3/Experiment.html
+++ b/src/lab/exp3/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Forced vibration of S.D.O.F system</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have <a href="../Introduction.html">prerequisites8</a> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 									<a href="undamped_forced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a>
 									<br/> 
 									<a href="DampedForced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a>
