--- a/src/lab/exp10/Experiment.html
+++ b/src/lab/exp10/Experiment.html
@@ -122,9 +122,9 @@
 						<h1 class="text-h1-lightblue">Vibration Control</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 <a href="vibration-control1.html" target="_blank">Go to Flash view on Vibration Control - Tuned Mass Damper(Click here)</a>
-									<br/>
+									
 									<br/> <a href="tld.swf" target="_blank">Go to Flash view on Vibration Control - Tuned Liquid Damper(Click here)</a>
 									<br/>
 									<!-- <a href="ve_vibrationcontrol.html" target="_blank">Go to Virtual lab on Vibration Control(Click here)</a>
