--- a/src/lab/exp5/Experiment.html
+++ b/src/lab/exp5/Experiment.html
@@ -124,8 +124,8 @@
 							<p>
 								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 <!-- <a href="responsespectrum.avi" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a>
-									<br/>
-									<br/> --><a href="responsespectrum.swf" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a>
+									<br/>-->
+									<br/> <a href="responsespectrum.swf" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a>
 									<br/>
 									<!-- <a href="ve_responseSpecturm.html" target="_blank">Go to Virtual lab on Concept of Response Spectrum(Click here)</a> -->
 									<br/>
